incluir a lista de serviços

--- a/index.html
+++ b/index.html
@@ -1,19 +1,66 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Barbearia Ramos</title>
-  </head>
-  <body>
-    <h1>
-      Barbearia Ramos  <img src="imagem/WhatsApp Image 2023-07-03 at 13.58.04.jpeg" alt="">
-    </h1>
-  </body>
-</html>
+<html lang="pt">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="index.css">
+  <title>Barbearia Ramos</title>
+</head>
+
+<body>
+
+  <h1>
+    Barbearia Ramos <img src="imagem/WhatsApp Image 2023-07-03 at 13.58.04.jpeg" alt="">
+  </h1>
+  <main>
+    <section class="section_servico">
+      <ul>
+        <li>
+          <a href="#">Corte R$25,00</a>
+        </li>
+        <li>
+          <a href="#">Sombracelha R$5,00</a>
+        </li>
+        <li>
+          <a href="#">Barba R$15,00</a>
+        </li>
+        <li>
+          <a href="#">Acabamento R$7,00</a>
+        </li>
+        <li>
+          <a href="#">Luzes R$35,00</a>
+        </li>
+        <li>
+          <a href="#">Relaxamento R$25,00</a>
+        </li>
+        <li>
+          <a href="#">Pigmentação R$20,00</a>
+        </li>
+        <li>
+          <a href="#">Platinado R$60,00</a>
+        </li>
+        <li>
+          <a href="#">Selagem R$50,00</a>
+        </li>
+      </ul>
+
+
+    </section>
+    <section class="section_cliente">
+      <input type="text" placeholder="Nome Completo" id="">
+      <input type="text" placeholder="Celular  de contato" id="">
+      <input type="text" placeholder="Data e Horario" id="">
+      <input type="text" placeholder="Forma de pagamento" id="">
+
+      <div class="btn">
+        <button id="btn_cancelar">Cancelar</button>
+        <button id="btn_confirmar">Agendar</button>
+      </div>
+    </section>
+  </main>
+
+</body>
+
+</html>
