Alterado id dos campos input do tipo checkbox.

--- a/index.html
+++ b/index.html
@@ -1,74 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon" />
-    <title>Barbearia Ramos</title>
-  </head>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="shortcut icon" href="./img/icone_bigode.svg" type="image/x-icon" />
+  <title>Barbearia Ramos</title>
+</head>
 
-  <body>
-    <header>
-      <h1>
-        Barbearia Ramos
-        <img src="./img/logo.jpeg" alt="Logo do site" />
-      </h1>
-    </header>
-    <main>
-      <section class="section_servico">
-        <div class="servicos">
-          <input type="checkbox" id="input-corte-25" />
-          <label for="input-corte">Corte R$25,00</label>
+<body>
+  <header>
+    <h1>
+      Barbearia Ramos
+      <img src="./img/logo.jpeg" alt="Logo do site" />
+    </h1>
+  </header>
+  <main>
+    <section class="section_servico">
+      <div class="servicos">
+        <input type="checkbox" id="input-corte" />
+        <label for="input-corte">Corte R$25,00</label>
 
-          <input type="checkbox" id="input-sombracelha-5" />
-          <label for="input-sombracelha">Sombracelha R$5,00</label>
+        <input type="checkbox" id="input-sombrancelha" />
+        <label for="input-sombracelha">Sombracelha R$5,00</label>
 
-          <input type="checkbox" id="input-barba-15">
-          <label for="input-barba">Barba R$15,00</label>
+        <input type="checkbox" id="input-barba" />
+        <label for="input-barba">Barba R$15,00</label>
 
-          <input type="checkbox" id="input-acabamento-7">
-          <label for="input-acabamento">Acabamento R$7,00</label>
+        <input type="checkbox" id="input-acabamento" />
+        <label for="input-acabamento">Acabamento R$7,00</label>
 
-          <input type="checkbox" id="input-luzes-35">
-          <label for="input-luzes">Luzes R$35,00</label>
+        <input type="checkbox" id="input-luzes" />
+        <label for="input-luzes">Luzes R$35,00</label>
 
-          <input type="checkbox" id="input-relaxamento-25">
-          <label for="input-relaxamento">Relaxamento R$25,00</label>
+        <input type="checkbox" id="input-relaxamento" />
+        <label for="input-relaxamento">Relaxamento R$25,00</label>
 
-          <input type="checkbox" id="input-pigmentacao-20">
-          <label for="input-pigmentacao">Pigmentação R$20,00</label>
+        <input type="checkbox" id="input-pigmentacao" />
+        <label for="input-pigmentacao">Pigmentação R$20,00</label>
 
-          <input type="checkbox" id="input-platinado-60">
-          <label for="input-platinado">Platinado R$60,00</label>
+        <input type="checkbox" id="input-platinado" />
+        <label for="input-platinado">Platinado R$60,00</label>
 
-          <input type="checkbox" id="input-selagem-50">
-          <label for="input-selagem">Selagem R$50,00</label>
-        </div>
+        <input type="checkbox" id="input-selagem" />
+        <label for="input-selagem">Selagem R$50,00</label>
+      </div>
 
-        <div class="container_somatoria">
-          <h3>Total:</h3>
-          <span class="somatoria">R$ <span id="total">0,00</span></span>
-        </div>
-      </section>
+      <div class="container_somatoria">
+        <h3>Total:</h3>
+        <span class="somatoria">R$ <span id="total">0,00</span></span>
+      </div>
+    </section>
 
-      <section class="section_cliente">
-        <input type="text" placeholder="Nome Completo" id="" />
-        <input type="text" placeholder="Celular  de contato" id="" />
-        <input type="text" placeholder="Data e Horario" id="" />
-        <input type="text" placeholder="Forma de pagamento" id="" />
+    <section class="section_cliente">
+      <input type="text" placeholder="Nome Completo" id="" />
+      <input type="text" placeholder="Celular  de contato" id="" />
+      <input type="text" placeholder="Data e Horario" id="" />
+      <input type="text" placeholder="Forma de pagamento" id="" />
 
-        <div class="btn">
-          <button id="btn_cancelar">Cancelar</button>
-          <button id="btn_agendar">Agendar</button>
-        </div>
-      </section>
-    </main>
+      <div class="btn">
+        <button id="btn_cancelar">Cancelar</button>
+        <button id="btn_agendar">Agendar</button>
+      </div>
+    </section>
+  </main>
 
-
-    <script src="./js/index.js"></script>
-  </body>
+  <script src="./js/index.js"></script>
+</body>
 
 </html>
